[package]
name = "string_analyzer_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tokio = { version = "1.40", features = ["full"] }
once_cell = "1.20"
regex = "1.11"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"